[package]
name = "rust-tidbits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.68"
bytes = "1"
futures = "0.3.26"
async-channel = "1.8.0"
async-stream = "0.3.3"
rand = "0.8.5"
reqwest = { version = "0.11.15", features = ["json"] }
serde_json = "1.0.94"
url = "2.3.1"
async-trait = "0.1.67"
tokio-stream = "0.1.12"
thiserror = "1.0.40"
